<resources>
    <string name="app_name">Final Project</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="assignment_description">Assignment Description</string>
    <string name="select_subject">Select Subject</string>

    <string name="welcome_log_in">Welcome , Log in:</string>
    <string name="password">PASSWORD</string>
    <string name="std_122">std@122</string>
    <string name="username">USERNAME</string>
    <string name="about_us">About Us</string>
    <string name="at_our_school_we_work_hard_to_support_every_student_s_growth_and_success_we_focus_on_building_a_strong_reliable_education_that_prepares_them_for_the_future_through_dedication_care_and_innovative_teaching_we_help_students_reach_their_full_potential_and_become_confident_capable_individuals">At our school, we work hard to support every student’s growth and success. We focus on building a strong, reliable education that prepares them for the future. Through dedication, care, and innovative teaching, we help students reach their full potential and become confident, capable individuals.</string>
    <string name="learn_more">Learn More</string>
    <string name="add_new_student">Add New Student</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="passwordStd">Password</string>
    <string name="birth_year_e_g_2003">Birth Year (e.g. 2003)</string>
    <string name="major">Major</string>
    <string name="level_e_g_freshman">Level (e.g. Freshman)</string>
    <string name="add_student">Add Student</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="full_name_teacher">Full Name</string>
    <string name="email_teacher">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="subject">Subject:</string>
    <string name="years_of_experience">Years of Experience:</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="assignment_submition">Assignment Submition</string>
    <string name="assignmentTtitle">Assignment Title</string>
    <string name="Ass_subject">Subject</string>
    <string name="due">Due:</string>
    <string name="description">Description:</string>
    <string name="attachment_http_example_com_assignment_pdf">Attachment: http://example.com/assignment.pdf</string>
    <string name="select_file">Select File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="submit_assignment">Submit Assignment</string>
    <string name="headline_goes_here">Headline goes here</string>
    <string name="detailed_news_description_goes_here_this_is_where_your_news_content_will_appear">Detailed news description goes here. This is where your news content will appear.</string>
    <string name="contact_us">Contact Us:</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="name">Name</string>
    <string name="email_contact">Email</string>
    <string name="phone">Phone</string>
    <string name="role">Role</string>
    <string name="subject_contact">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="edit_student">Edit Student</string>
    <string name="select_student_id">Select Student ID</string>
    <string name="student_id">Student ID</string>
    <string name="full_name_std">Full Name</string>
    <string name="email_std">Email</string>
    <string name="birth_year">Birth Year</string>
    <string name="major_std">Major</string>
    <string name="level_e_g_freshman_sophomore">Level (e.g. Freshman, Sophomore)</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_teacher">Edit Teacher</string>
    <string name="select_teacher_id">Select Teacher ID:</string>
    <string name="teacherID">Teacher ID</string>
    <string name="full_name_teacheer">Full Name</string>
    <string name="emailTeacher">Email</string>
    <string name="department">Department:</string>
    <string name="salary">Salary:</string>
    <string name="save_changes_teacher">Save Changes</string>
    <string name="now_june_8">Now — June 8</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="subjectName">Subject Name</string>
    <string name="mark">Mark</string>
    <string name="add_subject_gpa">Add Subject</string>
    <string name="gpa_0_00">GPA: 0.00</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="silver_oak_school">Silver Oak School</string>
    <string name="passwordLogin">Password</string>
    <string name="usernameLogin">Username</string>
    <string name="login">Login</string>
    <string name="contact_usLogin">Contact us</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="about_usLogin">About us</string>
    <string name="registrar_dashboard">📋 Registrar Dashboard</string>
    <string name="add_student_registrar">Add Student</string>
    <string name="edit_student_registrar">Edit Student</string>
    <string name="add_teacher_registrar">Add Teacher</string>
    <string name="edit_teacher_reg">Edit Teacher</string>
    <string name="add_student_schedule">Add Student Schedule</string>
    <string name="add_subject_reg">Add Subject</string>
    <string name="add_teacher_schedule">Add Teacher Schedule</string>
    <string name="welcome_to_our_schools_newsletter">Welcome to Our Schools Newsletter</string>
    <string name="submit_marks">Submit Marks</string>
    <string name="___">─────────────────────────────────</string>
    <string name="edit_marks">Edit Marks</string>
    <string name="search_students">Search students...</string>
    <string name="dashboard">Dashboard</string>
    <string name="schedule">Schedule</string>
    <string name="marks">Marks</string>
    <string name="send_assignment">📬 Send Assignment</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="attach_files">Attach Files</string>
    <string name="no_file_selected_">No file selected</string>
    <string name="pick_due_date">Pick Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="submit_assignment_">Submit Assignment</string>
    <string name="dashboard_">Dashboard</string>
    <string name="schedule_">Schedule</string>
    <string name="marks_">Marks</string>
    <string name="thu">THU</string>
    <string name="_11">11</string>
    <string name="may_11_9_00_am_6_00_pm">May 11 @ 9:00 am — 6:00 pm</string>
    <string name="benefit_corporation_legislation">Benefit Corporation Legislation</string>
    <string name="silver_oak_school_">Silver Oak School</string>
    <string name="student_marks">Student Marks</string>
    <string name="dashboardD">Dashboard</string>
    <string name="Sschedule">Schedule</string>
    <string name="Mmarks">Marks</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu_">Thu</string>
    <string name="no_schedule_for_this_day">No schedule for this day.</string>
    <string name="dashboard_d">Dashboard</string>
</resources>