<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8d99ae"
    android:padding="24dp"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/add_new_student"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/full_name"

            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/email"

            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/passwordStd"

            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editBirthYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/birth_year_e_g_2003"
            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMajor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/major"

            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="text" />

        <EditText
            android:id="@+id/editLevel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_edittext_white"
            android:hint="@string/level_e_g_freshman"

            android:drawablePadding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#2b2d42"
            android:text="@string/add_student"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>
